testsuite/tests/grammar/invalid_enum/common.lkt
@abstract class FooNode implements Node[FooNode] {
}

enum class Example : FooNode {
    case Example1, Example2, Example3
}
